--- a/index.html
+++ b/index.html
@@ -172,41 +172,41 @@
 
       <div class="gallery" id="gallery">
         <!-- Замените src на свои фото (минимум 1200px по ширине для полноэкранного) -->
-        <a class="gallery__item" href="/img/gallery1.jpg">
-          <img src="/img/gallery1.jpg" alt="Современная площадка — объект 1" loading="lazy">
+        <a class="gallery__item" href="./img/gallery1.jpg">
+          <img src="./img/gallery1.jpg" alt="Современная площадка — объект 1" loading="lazy">
         </a>
-        <a class="gallery__item" href="/img/gallery2.jpg">
-          <img src="/img/gallery2.jpg" alt="Современная площадка — объект 2" loading="lazy">
+        <a class="gallery__item" href="./img/gallery2.jpg">
+          <img src="./img/gallery2.jpg" alt="Современная площадка — объект 2" loading="lazy">
         </a>
-        <a class="gallery__item" href="/img/gallery3.jpg">
-          <img src="/img/gallery3.jpg" alt="Классическая площадка — объект 3" loading="lazy">
+        <a class="gallery__item" href="./img/gallery3.jpg">
+          <img src="./img/gallery3.jpg" alt="Классическая площадка — объект 3" loading="lazy">
         </a>
-        <a class="gallery__item" href="/img/gallery4.jpg">
-          <img src="/img/gallery4.jpg" alt="Спортивный комплекс — объект 4" loading="lazy">
+        <a class="gallery__item" href="./img/gallery4.jpg">
+          <img src="./img/gallery4.jpg" alt="Спортивный комплекс — объект 4" loading="lazy">
         </a>
-        <a class="gallery__item" href="/img/gallery5.jpg">
-          <img src="/img/gallery5.jpg" alt="Скейт-парк — объект 5" loading="lazy">
+        <a class="gallery__item" href="./img/gallery5.jpg">
+          <img src="./img/gallery5.jpg" alt="Скейт-парк — объект 5" loading="lazy">
         </a>
-        <a class="gallery__item" href="/img/gallery6.jpg">
-          <img src="/img/gallery6.jpg" alt="Игровая зона — объект 6" loading="lazy">
+        <a class="gallery__item" href="./img/gallery6.jpg">
+          <img src="./img/gallery6.jpg" alt="Игровая зона — объект 6" loading="lazy">
         </a>
-        <a class="gallery__item" href="/img/gallery7.jpg">
-          <img src="/img/gallery7.jpg" alt="Покрытие — объект 7" loading="lazy">
+        <a class="gallery__item" href="./img/gallery7.jpg">
+          <img src="./img/gallery7.jpg" alt="Покрытие — объект 7" loading="lazy">
         </a>
-        <a class="gallery__item" href="/img/gallery8.jpg">
-          <img src="/img/gallery8.jpg" alt="Ограждения — объект 8" loading="lazy">
+        <a class="gallery__item" href="./img/gallery8.jpg">
+          <img src="./img/gallery8.jpg" alt="Ограждения — объект 8" loading="lazy">
         </a>
-        <a class="gallery__item" href="/img/gallery9.jpg">
-          <img src="/img/gallery9.jpg" alt="Хоккейный корт — объект 9" loading="lazy">
+        <a class="gallery__item" href="./img/gallery9.jpg">
+          <img src="./img/gallery9.jpg" alt="Хоккейный корт — объект 9" loading="lazy">
         </a>
-        <a class="gallery__item" href="/img/gallery10.jpg">
-          <img src="/img/gallery10.jpg" alt="Детская площадка — объект 10" loading="lazy">
+        <a class="gallery__item" href="./img/gallery10.jpg">
+          <img src="./img/gallery10.jpg" alt="Детская площадка — объект 10" loading="lazy">
         </a>
-        <a class="gallery__item" href="/img/gallery11.jpg">
-          <img src="/img/gallery11.jpg" alt="Игровые формы — объект 11" loading="lazy">
+        <a class="gallery__item" href="./img/gallery11.jpg">
+          <img src="./img/gallery11.jpg" alt="Игровые формы — объект 11" loading="lazy">
         </a>
-        <a class="gallery__item" href="/img/gallery12.jpg">
-          <img src="/img/gallery12.jpg" alt="Покрытие — объект 12" loading="lazy">
+        <a class="gallery__item" href="./img/gallery12.jpg">
+          <img src="./img/gallery12.jpg" alt="Покрытие — объект 12" loading="lazy">
         </a>
       </div>
     </div>
@@ -302,4 +302,5 @@
 
   <script src="js/script.js" defer></script>
 </body>
+
 </html>
