--- a/index.html
+++ b/index.html
@@ -172,40 +172,40 @@
 
       <div class="gallery" id="gallery">
         <!-- Замените src на свои фото (минимум 1200px по ширине для полноэкранного) -->
-        <a class="gallery__item" href="./img/gallery1.jpg">
+        <a class="gallery__item" href="./img/gallery1.jpg" target="_blank">
           <img src="./img/gallery1.jpg" alt="Современная площадка — объект 1" loading="lazy">
         </a>
-        <a class="gallery__item" href="./img/gallery2.jpg">
+        <a class="gallery__item" href="./img/gallery2.jpg" target="_blank">
           <img src="./img/gallery2.jpg" alt="Современная площадка — объект 2" loading="lazy">
         </a>
-        <a class="gallery__item" href="./img/gallery3.jpg">
+        <a class="gallery__item" href="./img/gallery3.jpg" target="_blank">
           <img src="./img/gallery3.jpg" alt="Классическая площадка — объект 3" loading="lazy">
         </a>
-        <a class="gallery__item" href="./img/gallery4.jpg">
+        <a class="gallery__item" href="./img/gallery4.jpg" target="_blank">
           <img src="./img/gallery4.jpg" alt="Спортивный комплекс — объект 4" loading="lazy">
         </a>
-        <a class="gallery__item" href="./img/gallery5.jpg">
+        <a class="gallery__item" href="./img/gallery5.jpg" target="_blank">
           <img src="./img/gallery5.jpg" alt="Скейт-парк — объект 5" loading="lazy">
         </a>
-        <a class="gallery__item" href="./img/gallery6.jpg">
+        <a class="gallery__item" href="./img/gallery6.jpg" target="_blank">
           <img src="./img/gallery6.jpg" alt="Игровая зона — объект 6" loading="lazy">
         </a>
-        <a class="gallery__item" href="./img/gallery7.jpg">
+        <a class="gallery__item" href="./img/gallery7.jpg" target="_blank">
           <img src="./img/gallery7.jpg" alt="Покрытие — объект 7" loading="lazy">
         </a>
-        <a class="gallery__item" href="./img/gallery8.jpg">
+        <a class="gallery__item" href="./img/gallery8.jpg" target="_blank">
           <img src="./img/gallery8.jpg" alt="Ограждения — объект 8" loading="lazy">
         </a>
-        <a class="gallery__item" href="./img/gallery9.jpg">
+        <a class="gallery__item" href="./img/gallery9.jpg" target="_blank">
           <img src="./img/gallery9.jpg" alt="Хоккейный корт — объект 9" loading="lazy">
         </a>
-        <a class="gallery__item" href="./img/gallery10.jpg">
+        <a class="gallery__item" href="./img/gallery10.jpg" target="_blank">
           <img src="./img/gallery10.jpg" alt="Детская площадка — объект 10" loading="lazy">
         </a>
-        <a class="gallery__item" href="./img/gallery11.jpg">
+        <a class="gallery__item" href="./img/gallery11.jpg" target="_blank">
           <img src="./img/gallery11.jpg" alt="Игровые формы — объект 11" loading="lazy">
         </a>
-        <a class="gallery__item" href="./img/gallery12.jpg">
+        <a class="gallery__item" href="./img/gallery12.jpg" target="_blank">
           <img src="./img/gallery12.jpg" alt="Покрытие — объект 12" loading="lazy">
         </a>
       </div>
@@ -304,3 +304,4 @@
 </body>
 
 </html>
+
