--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
       </div>
 
       <blockquote class="quote">
-        “Мы создаём не просто площадки — мы дарим взрослым и детям радость, настроение и веру в маленькое чудо.”
+        <h2>“Мы создаём не просто площадки — мы дарим взрослым и детям радость, настроение и веру в маленькое чудо.”</h2>
       </blockquote>
     </div>
   </section>
