--- a/index.html
+++ b/index.html
@@ -56,6 +56,9 @@
   <!-- Герой -->
   <section class="hero">
     <div class="container hero__grid">
+      <div class="hero__title">
+          <img src="./img/title-logo.jpg" alt="title-logo">
+      </div>
       <div class="hero__content">
         <h1>Создаём игровой и&nbsp;спортивный мир для детей</h1>
         <p class="lead">
@@ -159,7 +162,9 @@
       </div>
 
       <blockquote class="quote">
-        <h2>“Мы создаём не просто площадки — мы дарим взрослым и детям радость, настроение и веру в маленькое чудо.”</h2>
+        <h2>
+          “Мы создаём не просто площадки — мы дарим взрослым и детям радость, настроение и веру в маленькое чудо.”
+        </h2>
       </blockquote>
     </div>
   </section>
@@ -273,7 +278,7 @@
     <div class="container footer__grid">
       <div class="footer__brand">
         <img src="./img/title-logo.jpg" alt="" class="logo-mark" />
-        <div>
+        <div class="footer__logo">
           <strong>Kids Territory</strong>
           <div class="micro">Строительство площадок под ключ</div>
         </div>
@@ -304,4 +309,5 @@
 </body>
 
 </html>
+
 
