--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <meta property="og:title" content="Kids Territory — Площадки под ключ">
   <meta property="og:description" content="Создаем игровой и спортивный мир для детей. 300+ реализованных проектов. Бесплатная консультация.">
   <meta property="og:type" content="website">
-  <meta property="og:image" content="assets/og-cover.jpg">
+  <meta property="og:image" content="img/title-logo.jpg">
   <meta property="og:locale" content="ru_RU">
 
   <!-- Schema.org -->
@@ -69,9 +69,9 @@
           <a class="btn btn--ghost" href="#projects">Посмотреть работы</a>
         </div>
         <ul class="hero__stats">
-          <li><strong>7+ лет</strong> на рынке</li>
-          <li><strong>300+</strong> проектов</li>
-          <li><strong>10+</strong> производителей</li>
+          <li><strong class="hero__strong">7+ лет</strong> на рынке</li>
+          <li><strong class="hero__strong">300+</strong> проектов</li>
+          <li><strong class="hero__strong">10+</strong> производителей</li>
         </ul>
       </div>
       <div class="hero__media">
@@ -178,40 +178,40 @@
       <div class="gallery" id="gallery">
         <!-- Замените src на свои фото (минимум 1200px по ширине для полноэкранного) -->
         <a class="gallery__item" href="./img/gallery1.jpg" target="_blank">
-          <img src="./img/gallery1.jpg" alt="Современная площадка — объект 1" loading="lazy">
+          <img src="./img/gallery1.jpg" alt="объект 1" loading="lazy">
         </a>
         <a class="gallery__item" href="./img/gallery2.jpg" target="_blank">
-          <img src="./img/gallery2.jpg" alt="Современная площадка — объект 2" loading="lazy">
+          <img src="./img/gallery2.jpg" alt="объект 2" loading="lazy">
         </a>
         <a class="gallery__item" href="./img/gallery3.jpg" target="_blank">
-          <img src="./img/gallery3.jpg" alt="Классическая площадка — объект 3" loading="lazy">
+          <img src="./img/gallery3.jpg" alt="объект 3" loading="lazy">
         </a>
         <a class="gallery__item" href="./img/gallery4.jpg" target="_blank">
-          <img src="./img/gallery4.jpg" alt="Спортивный комплекс — объект 4" loading="lazy">
+          <img src="./img/gallery4.jpg" alt="объект 4" loading="lazy">
         </a>
         <a class="gallery__item" href="./img/gallery5.jpg" target="_blank">
-          <img src="./img/gallery5.jpg" alt="Скейт-парк — объект 5" loading="lazy">
+          <img src="./img/gallery5.jpg" alt="объект 5" loading="lazy">
         </a>
         <a class="gallery__item" href="./img/gallery6.jpg" target="_blank">
-          <img src="./img/gallery6.jpg" alt="Игровая зона — объект 6" loading="lazy">
+          <img src="./img/gallery6.jpg" alt="объект 6" loading="lazy">
         </a>
         <a class="gallery__item" href="./img/gallery7.jpg" target="_blank">
-          <img src="./img/gallery7.jpg" alt="Покрытие — объект 7" loading="lazy">
+          <img src="./img/gallery7.jpg" alt="объект 7" loading="lazy">
         </a>
         <a class="gallery__item" href="./img/gallery8.jpg" target="_blank">
-          <img src="./img/gallery8.jpg" alt="Ограждения — объект 8" loading="lazy">
+          <img src="./img/gallery8.jpg" alt="объект 8" loading="lazy">
         </a>
         <a class="gallery__item" href="./img/gallery9.jpg" target="_blank">
-          <img src="./img/gallery9.jpg" alt="Хоккейный корт — объект 9" loading="lazy">
+          <img src="./img/gallery9.jpg" alt="объект 9" loading="lazy">
         </a>
         <a class="gallery__item" href="./img/gallery10.jpg" target="_blank">
-          <img src="./img/gallery10.jpg" alt="Детская площадка — объект 10" loading="lazy">
+          <img src="./img/gallery10.jpg" alt="объект 10" loading="lazy">
         </a>
         <a class="gallery__item" href="./img/gallery11.jpg" target="_blank">
-          <img src="./img/gallery11.jpg" alt="Игровые формы — объект 11" loading="lazy">
+          <img src="./img/gallery11.jpg" alt="объект 11" loading="lazy">
         </a>
         <a class="gallery__item" href="./img/gallery12.jpg" target="_blank">
-          <img src="./img/gallery12.jpg" alt="Покрытие — объект 12" loading="lazy">
+          <img src="./img/gallery12.jpg" alt="объект 12" loading="lazy">
         </a>
       </div>
     </div>
@@ -251,24 +251,6 @@
           </ul>
           <p class="micro">География работ — по России. Возможен выезд на объект.</p>
         </div>
-
-        <form class="contacts__form" id="contactForm" novalidate>
-          <label>
-            Имя
-            <input type="text" name="name" placeholder="Как к вам обращаться" required>
-          </label>
-          <label>
-            Телефон
-            <input type="tel" name="phone" placeholder="+7 (___) ___-__-__" required>
-          </label>
-          <label>
-            Сообщение
-            <textarea name="message" rows="4" placeholder="Коротко опишите задачу" required></textarea>
-          </label>
-          <button type="submit" class="btn btn--accent">Отправить</button>
-          <p class="form__note">Нажимая «Отправить», вы соглашаетесь с <a href="#">политикой конфиденциальности</a>.</p>
-          <p class="form__status" id="formStatus" role="status" aria-live="polite"></p>
-        </form>
       </div>
     </div>
   </section>
@@ -307,8 +289,4 @@
 
   <script src="js/script.js" defer></script>
 </body>
-
 </html>
-
-
-
