--- a/index.html
+++ b/index.html
@@ -244,7 +244,8 @@
         <div class="contacts__card">
           <h3>Связаться с нами</h3>
           <ul class="contact-list">
-            <li><span>Телефон:</span> <a href="tel:+79850746169">+7-985-074-6169</a>, <a href="tel:+79670432059">+7-967-043-2059</a></li>
+            <li><span>Телефон:</span> <a href="tel:+79850746169">+7-985-074-6169</a></li>
+            <li><span>Телефон:</span> <a href="tel:+79670432059">+7-967-043-2059</a></li>
             <li><span>Email:</span> <a href="mailto:detskieploshadki@inbox.ru">detskieploshadki@inbox.ru</a></li>
             <li><span>WhatsApp:</span> <a href="https://wa.me/+79850746169" target="_blank" rel="noopener">+79850746169</a></li>
             <li><span>Telegram:</span> <a href="https://t.me/beshenovni" target="_blank" rel="noopener">@beshenovni</a></li>
@@ -289,4 +290,5 @@
 
   <script src="js/script.js" defer></script>
 </body>
+
 </html>
